--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Webpack4基本使用</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Cache-Control" content="no-cache">
+    <meta http-equiv="pragma" content="no-cache">
+    <title></title>
+
+    <link href="https://c.yunkaodian.com/wx/ionic.min.css" rel="stylesheet">
+    <link href="https://c.yunkaodian.com/wx/swiper.min.css" rel="stylesheet">
+
+
+    <script src="https://c.yunkaodian.com/wx/jquery.min.js"></script>
+    <script src="https://c.yunkaodian.com/wx/jquery.flot.min.js"></script>
+    <script src="https://c.yunkaodian.com/wx/ionic/1.3.2/js/ionic.bundle.min.js"></script>
+
+    <script src="https://c.yunkaodian.com/wx/swiper.min.js"></script>
+    <script src="https://c.yunkaodian.com/wx/src/callAdvertisement.js"></script>
+
+  </head>
+  <body ng-app="ykd_wx" id="ykd_wx">
+    <!--<ion-nav-bar class="bar-positive">-->
+      <!--<ion-nav-back-button>-->
+      <!--</ion-nav-back-button>-->
+    <!--</ion-nav-bar>-->
+    <ion-nav-view>
+      <img src="./img/small-image.png" alt="">
+      <img src="./img/normal-image.png" alt="">
+      <img src="./img/big-image.png" alt="">
+    </ion-nav-view>
+  </body>
 </html>
