--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
   </head>
   <body ng-app="ykd_wx" id="ykd_wx">
-    <div>testttttttttttttt</div>
+    <div>444444444444444</div>
     <ion-nav-view>
 
     </ion-nav-view>
